samples/_failures_safe/1761321752_c0af21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85f262fd.c: In function ‘main’:
./samples/SAFE/__tmp_85f262fd.c:147:5: error: expected declaration or statement at end of input
  147 |     if (op == OP_INVALID) {
      |     ^~
./samples/SAFE/__tmp_85f262fd.c:147:5: error: expected declaration or statement at end of input
